# ISIT2024

./: README.md
project_isit/: README.md  pyproject.toml
project_isit/parser/: pyproject.toml
project_isit/scraper/: README.md  app.py  image_scraper.py  pyproject.toml
project_isit/scraper/templates/: index.html
